Use alta-maven-plugin to configure the surefire boot classpath in axis2-saaj.